Convert project into Gradle project